--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Visual Studio
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+build/
+bld/
+[Bb]in/
+[Oo]bj/
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -45,3 +57,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.obj
+*.opensdf
+*.sdf
