--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -39,9 +39,6 @@
     <ClCompile Include="Math\Vector3.cpp">
       <Filter>Source Files\math</Filter>
     </ClCompile>
-    <ClCompile Include="Game\SpaceGame.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Game\GameStates\SplashState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -75,6 +72,21 @@
     <ClCompile Include="Game\Entities\Ship.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Game\GameStates\TitleState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\JamGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\GameStates\StoryState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\GameStates\InstructionsState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\GameStates\GameoverState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Math\AffineTransform.h">
@@ -91,9 +103,6 @@
     </ClInclude>
     <ClInclude Include="Math\Vector3.h">
       <Filter>Header Files\math</Filter>
-    </ClInclude>
-    <ClInclude Include="Game\SpaceGame.h">
-      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\GameStates\SplashState.h">
       <Filter>Header Files</Filter>
@@ -135,6 +144,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game\Entities\Ships\Djoker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\GameStates\TitleState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\JamGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\GameStates\StoryState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\GameStates\InstructionsState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\GameStates\GameoverState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
